<resources>
    <string name="app_name">Zhuki_Game</string>
    <string name="tab_registration">Регистрация</string>
    <string name="tab_rules">Правила</string>
    <string name="tab_authors">Авторы</string>
    <string name="tab_settings">Настройки</string>
    <string name="tab_game">Игра</string>
    <string name="tab_records">Рекорды</string>

    <string name="game_score_label">Счёт:</string>
    <string name="game_time_label">Время:</string>
    <string name="game_start">Старт</string>
    <string name="game_reset">Сброс</string>
    <string name="game_restart">Сыграть ещё раз</string>
    <string name="game_message_ready">Нажмите «Старт», чтобы начать охоту на жуков</string>
    <string name="game_message_play">Идёт игра! Ловите насекомых и хватайте золотые звёзды</string>
    <string name="game_over_score">Игра окончена! Очки: %1$d</string>
    <string name="game_insect_desc">Насекомое</string>
    <string name="game_bonus_desc">Бонус</string>

    <string name="settings_title">Настройки игры</string>
    <string name="settings_speed">Скорость</string>
    <string name="settings_max_roaches">Макс. тараканов</string>
    <string name="settings_bonus_interval">Интервал бонусов</string>
    <string name="settings_round_duration">Длительность раунда</string>
    <string name="settings_save">Сохранить</string>
    <string name="settings_reset">Сбросить</string>
    <string name="settings_saved_toast">Настройки сохранены</string>
    <string name="settings_reset_toast">Настройки сброшены к значениям по умолчанию</string>

    <string name="player_new">Новый игрок</string>
    <string name="player_saved">Игрок сохранён</string>
    <string name="game_no_user">Сначала зарегистрируйте игрока</string>
    <string name="game_record_saved">Рекорд сохранён: %1$d</string>
    <string name="game_record_beaten">Новый рекорд: %1$d</string>
    <string name="game_record_kept">Рекорд не побит, лучший: %1$d</string>

    <string name="widget_gold_label">Курс золота ЦБ</string>
    <string name="widget_gold_desc">Показывает текущий курс золота Банка России</string>
    <string name="widget_gold_none">Нет данных</string>
    <string name="widget_gold_unit">₽ / грамм</string>
    <string name="game_golden_desc">Золотой таракан</string>
</resources>